@@ -3,6 +3,9 @@ DATE: 06/21/2017
 STAFF: lec 
 TR12250/Lit Triage
 qcr.shtml : added link to littriageload/error file
+WF_AP_NewAlleleNomenTag.py  
+WF_AP_NewDiseaseModelTag.py  
+WF_AP_Routed.py
 
 TAG: qcreports_db-6-0-10-6
 DATE: 08/03/2017
